# Big-Engine

./: .env.cmake  .gitignore  CMakeLists.txt  README.md
assets/shaders/: shader.frag
src/: app.cpp  app.hpp  device.cpp  device.hpp  main.cpp  render.cpp  render.hpp  window.cpp  window.hpp
